# angular-html-parser

./: .gitattributes  .gitignore  SECURITY.md  readme.md
.github/workflows/: angular-html-parser-continuous-integration.yml  angular-html-parser-publish.yml  augular-html-parser-continuous-integration.yml
aio/tools/examples/shared/boilerplate/cli/: tsconfig.json
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-value-tree/: BUILD.bazel
integration/defer/: angular.json
integration/platform-server-hydration/: tsconfig.json
