load("//devtools/tools:defaults.bzl", "ng_project", "sass_binary")

package(default_visibility = ["//devtools:__subpackages__"])

sass_binary(
    name = "signals-value-tree_styles",
    src = "signals-value-tree.component.scss",
    deps = [
        "//devtools/projects/ng-devtools/src/styles:typography",
    ],
)

ng_project(
    name = "signals-value-tree",
    srcs = [
        "signal-data-source.ts",
        "signals-value-tree.component.ts",
    ],
    angular_assets = [
        "signals-value-tree.component.html",
        ":signals-value-tree_styles",
    ],
    deps = [
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/material",
        "//:node_modules/rxjs",
        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signal-graph",
        "//devtools/projects/protocol",
    ],
)
